fix: setup storybook

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cuy-ui",
   "private": false,
-  "version": "0.0.0",
+  "version": "0.0.2",
   "type": "module",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -21,7 +21,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test": "vitest",
-    "test:cov": "vitest run --coverage"
+    "test:cov": "vitest run --coverage",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "react": "^19.0.0",
